--- a/LibraryNet/LibraryNet.Web.Api/LibraryNet.Web.Api.csproj
+++ b/LibraryNet/LibraryNet.Web.Api/LibraryNet.Web.Api.csproj
@@ -10,4 +10,12 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LibraryNet.Core\LibraryNet.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
