- Criação do fábrica API e injeções

--- a/LibraryNet/LibraryNet.Web.Api/appsettings.json
+++ b/LibraryNet/LibraryNet.Web.Api/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "SqlServerConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Teste;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
 }
