--- a/LibraryNet/LibraryNet.Repository/LibraryNet.Repository.csproj
+++ b/LibraryNet/LibraryNet.Repository/LibraryNet.Repository.csproj
@@ -20,10 +20,7 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Migrations\" />
+		<PackageReference Include="MongoDB.Driver" Version="2.28.0" />
 	</ItemGroup>
 
 	<ItemGroup>
