- Ajustes mapeamento dominio e classes

--- a/LibraryNet/LibraryNet.Web.Api/appsettings.json
+++ b/LibraryNet/LibraryNet.Web.Api/appsettings.json
@@ -7,5 +7,6 @@
   },
   "AllowedHosts": "*",
 
-  "SqlServerConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Teste;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  "SqlServerConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Teste;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+  "MongoConnection": "mongodb://localhost:27017/"
 }
